# RA-Skills

./: .gitignore  CLAUDE.md  README.md
python/: README.md  pyproject.toml
python/ra_skills/: __init__.py  cli.py
skills/community/clawhub/a/agent-roundtable/: CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README_EN.md  SECURITY.md  SKILL.md  _meta.json  package.json  pyproject.toml  quick_demo.py  skill-card.md
skills/community/clawhub/a/agent-roundtable/docs/: ADAPTER.md  API.md  INTEGRATION.md  SKILL_SYNC.md  architecture.md
skills/community/clawhub/a/agent-roundtable/landing/: index.html  script.js  styles.css  vercel.json
skills/community/clawhub/a/agent-roundtable/scripts/: sync_skill.sh
skills/community/clawhub/a/agent-roundtable/tests/: __init__.py  conftest.py  test_core.py  test_core_coverage.py  test_core_web_integration.py  test_db.py  test_notify.py  test_web_publisher.py
skills/community/clawhub/a/amz-cat-research/: LICENSE  README.en.md  README.md  SKILL.md  _meta.json  pyproject.toml  skill-card.md
skills/community/clawhub/a/amz-cat-research/references/: bsr-node-mapping.md  examples.md  negative-rules.md  output-template.md  selectors.md
skills/community/clawhub/a/amz-cat-research/scripts/: __init__.py  gen_bsr.py  gen_product.py  gen_sif.py  gen_spirit.py  gen_variants.py  healer.py  init.py  parse_raw.py  run_all.py  selector_registry.py  validate.py
skills/community/clawhub/a/api-cost-compare/: README.md  README_EN.md  SKILL.md  _meta.json  pyproject.toml  skill-card.md
skills/community/clawhub/a/api-cost-compare/api_cost_compare/: __init__.py  cli.py  providers.py
skills/community/clawhub/a/auto-video-generator/: CHANGELOG.md  CI_CD_DOCUMENTATION.md  PACKAGE_MANIFEST.json  README.md  README.zh-CN.md  SKILL.md  SKILL.zh-CN.md  _meta.json  config.example.yaml  contributing.md  pyproject.toml  setup.py  skill-card.md  sync_docs.py
skills/community/clawhub/a/auto-video-generator/auto_video_generator/: __init__.py  __main__.py  adapters.py  cli.py  config.py  environment.py  generator.py  template_manager.py  web.py
skills/community/clawhub/a/auto-video-generator/vscode-extension/: README.md  package.json
skills/community/clawhub/a/auto-video-generator/web-ui/: README.md  app.py  requirements.txt
skills/community/clawhub/b/beergaao/: AGENTS.md  README.md  SKILL.md  _meta.json  config.example.env  factor-reference.md  pyproject.toml  requirements.txt  risk-reference.md  skill-card.md  skill.json  strategy-reference.md  test_auto.py
skills/community/clawhub/c/claude-intel-monitor/: README.md  SKILL.md  _meta.json  pyproject.toml  skill-card.md
skills/community/clawhub/c/comfyui-workflow-generator/: README.md  SKILL.md  __init__.py  _meta.json  pyproject.toml  requirements.txt  skill-card.md
skills/community/clawhub/c/construction-law/: CHANGELOG.md  REVIEW-FEEDBACK.md  SKILL.md  _meta.json  pyproject.toml  skill-card.md
skills/community/clawhub/d/dazzle-photo-intelligence/: LICENSE  Makefile  README.md  SKILL.md  _meta.json  pyproject.toml  skill-card.md
skills/community/clawhub/e/engram-mcp-server/: CLAUDE.MD  KNOWLEDGE_VERIFICATION_PROMPT.md  README.md  README_en.md  SKILL.md  _meta.json  pyproject.toml  registry.json
skills/community/clawhub/g/glancely/: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DASHBOARD_UPGRADE_PLAN.md  E2E_TEST_PLAN.md  README.md  SKILL.md  _meta.json  install.sh  pyproject.toml  skill-card.md
skills/community/clawhub/g/grupr/: README.md  SKILL.md  _meta.json  pyproject.toml  skill-card.md
skills/community/clawhub/g/gt-core-skill/: CLAUDE.md  README.md  SKILL.md  _meta.json  pyproject.toml  skill-card.md
skills/community/clawhub/i/insta-orcha-task/: README.md  SKILL.md  __init__.py  __main__.py  _meta.json  api_client.py  config.py  pyproject.toml  run_grab.py  skill-card.md  skill.py
skills/community/clawhub/l/llm-deploy-helper/: README.md  README_EN.md  SKILL.md  _meta.json  pyproject.toml  skill-card.md
skills/community/clawhub/m/mktclaw/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SKILL.md  _meta.json  config.yaml  pyproject.toml  skill-card.md  version.json
skills/community/clawhub/m/modern-portfolio-theory/: CHANGELOG.md  README.md  SETUP.md  SKILL.md  _meta.json  pyproject.toml  requirements.txt  skill-card.md
skills/community/clawhub/m/morgana-anti-infinite-loop-v2-en/: SKILL.md  _meta.json  pyproject.toml  skill-card.md
skills/community/clawhub/o/origin-pro-mcp/: README.md  README.zh-CN.md  SKILL.md  _meta.json  pyproject.toml  requirements.txt  server.py  skill-card.md
skills/community/clawhub/p/peerberry-sdk/: LICENSE.md  README.md  SKILL.md  _meta.json  pyproject.toml  skill-card.md  zensical.toml
skills/community/clawhub/p/personal-health-agent/: README.md  SKILL.md  _meta.json  pyproject.toml
skills/community/clawhub/p/publish-to-public/: MANIFEST.txt  README.md  SKILL.md  _meta.json  pyproject.toml  skill-card.md  test_axiom_rebrand.py  test_axiom_rebrand.py.auto.md
skills/community/clawhub/q/qbo-mileage/: CHANGELOG.md  SKILL.md  _meta.json  plugin.json  pyproject.toml  skill-card.md
skills/community/clawhub/r/rtc-work/: README.md  SKILL.md  _meta.json  pyproject.toml  skill-card.md  test_match.py
skills/community/clawhub/s/sigui-security/: SKILL.md  _meta.json  evaluate.py  install.sh  pyproject.toml  skill-card.md
skills/community/clawhub/s/stock-realtime-brief/: CHANGELOG.md  README.md  SKILL.md  _meta.json  pyproject.toml  skill-card.md
skills/community/clawhub/s/super-memory/: ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASE_CHECKLIST.md  RUNBOOK.md  SECURITY.md  SKILL.md  UPGRADE_PLAN.md  _meta.json  docker-compose.yml  pyproject.toml  requirements.txt  ruff.toml  skill-card.md
skills/community/clawhub/v/velog-cli/: CHANGELOG.md  README.md  SKILL.md  _meta.json  pyproject.toml  skill-card.md
skills/community/clawhub/w/wechat-mp-skills/: ENCRYPTION.md  README.md  SKILL.md  _meta.json  config.json  image_mapping.json  pyproject.toml  requirements.txt  skill-card.md
(+272161 files in other folders)
