[build-system]
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-roundtable"
version = "1.2.4"
description = "Multi-Agent Roundtable Discussion Engine / 多 Agent 圆桌讨论引擎"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    {name = "Roundtable Contributors", email = "zmw@izmw.me"},
]
keywords = [
    "ai-agents",
    "multi-agent",
    "roundtable",
    "discussion",
    "collaboration",
    "consensus",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

# Zero external dependencies — only stdlib
dependencies = []

[project.urls]
Homepage = "https://github.com/MoyuFamily/agent-roundtable"
Repository = "https://github.com/MoyuFamily/agent-roundtable"
Issues = "https://github.com/MoyuFamily/agent-roundtable/issues"
Documentation = "https://github.com/MoyuFamily/agent-roundtable#readme"
Changelog = "https://github.com/MoyuFamily/agent-roundtable/blob/main/CHANGELOG.md"

[project.optional-dependencies]
hermes = []  # Hermes adapter auto-discovers if hermes-agent is installed
web = [
    "nanoid>=2.0",  # Token generation (falls back to secrets.token_urlsafe)
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4.0",
    "mypy>=1.10",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"roundtable" = ["py.typed", "web/*.html", "web/*.css", "web/*.mjs", "web/*.cjs"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
ignore = [
    "RUF001",  # ambiguous unicode in Chinese strings (fullwidth punctuation)
    "RUF003",  # ambiguous unicode in comments (fullwidth punctuation)
    "B027",    # empty method in abstract base class without abstract decorator
]

[tool.ruff.lint.isort]
known-first-party = ["roundtable"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
namespace_packages = true
explicit_package_bases = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = [
    "tools.registry",
    "hermes_cli.config",
]
ignore_missing_imports = true
