[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "amazon-category-research"
version = "5.0.0"
description = "Amazon Category Research Tool - Automated competitor analysis"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "Amazon Category Research Team" }
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"

[project.scripts]
amazon-category-research = "scripts.run_all:main"

[tool.setuptools.packages.find]
include = ["scripts*"]
