[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "BeerGaao"
version = "3.3.1"
description = "胜率总是倍儿高，收益也嘛倍儿好 - A股量化分析 Agent 工具集"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "GanJiaKouN16"},
]
keywords = ["stock", "quantitative", "trading", "agent", "a-share"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "pandas==2.0.3",
    "numpy==1.24.3",
    "requests==2.31.0",
    "tenacity==8.2.0",
    "python-dotenv==1.0.0",
    "scikit-learn==1.3.0",
    "scipy==1.11.0",
    "backtrader==1.9.78.123",
    "matplotlib==3.7.0",
    "akshare>=1.10.0",
]

[project.optional-dependencies]
tushare = [
    "tushare==1.4.0",
]
ml = [
    "xgboost==2.0.0",
    "lightgbm==4.0.0",
]
dev = [
    "pytest==7.4.0",
]

[project.urls]
Homepage = "https://github.com/GanJiaKouN16/BeerGaao"
Repository = "https://github.com/GanJiaKouN16/BeerGaao"
Issues = "https://github.com/GanJiaKouN16/BeerGaao/issues"

[project.scripts]
beer-gaao = "stock_skill.__main__:main"

[tool.setuptools.packages.find]
include = ["stock_skill*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
