[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-intel-monitor"
version = "0.1.0"
description = "检测 Claude/GPT/DeepSeek 是否降智 — Claude Intelligence Degradation Monitor"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "HermesMade"}]
keywords = ["claude", "ai", "benchmark", "monitoring", "degradation", "降智"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "rich>=13",
    "pydantic>=2",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio"]

[project.scripts]
claude-intel-monitor = "claude_intel_monitor.cli:main"

[tool.setuptools.packages.find]
where = ["."]
