[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ComfyUI-WorkflowGenerator"
version = "0.0.1"
description = "ComfyUI-WorkflowGenerator custom nodes for generating ComfyUI workflows from natural language"
readme = "README.md"
license = {text = "GNU General Public License v3"}
requires-python = ">=3.10"
classifiers = []
dependencies = [
  "sentence-transformers>=2.2.1",
  "tinydb>=4.8.2",
  "scikit-learn>=1.3.0",
  "omegaconf>=2.3.0",
]

[project.optional-dependencies]
dev = [
    "bump-my-version",
    "coverage",
    "mypy",
    "pre-commit",
    "pytest",
    "ruff",
]

[project.urls]
Repository = "https://github.com/danielpflorian/ComfyUI-WorkflowGenerator"
BugTracker = "https://github.com/danielpflorian/ComfyUI-WorkflowGenerator/issues"
Documentation = "https://github.com/danielpflorian/ComfyUI-WorkflowGenerator/wiki"

[tool.comfy]
PublisherId = "danielpflorian"
DisplayName = "ComfyUI-WorkflowGenerator"
Icon = ""
Tags = ["workflow", "llm", "ai", "generation"]
Repository = "https://github.com/danielpflorian/ComfyUI-WorkflowGenerator"

includes = []

[tool.setuptools.package-data]
"*" = ["*.*"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = [
    "tests",
]

[tool.mypy]
files = "."
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

[tool.ruff]
line-length = 140
src = ["nodes", "generators", "utils", "config", "cataloging", "tests"]
target-version = "py310"
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "S",   # flake8-bandit (security)
    "T20", # flake8-print
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "S101",  # use of assert (needed for tests)
    "T201",  # print statements (useful for debugging)
    "N801",  # class name should use CapWords (allow existing exception names)
    "N818",  # exception name should be named with an Error suffix (allow existing exception names)
    "S110",  # try-except-pass detected (intentional silent exceptions)
    "N999",  # invalid module name (false positive for directory names with hyphens)
    "N806",  # variable in function should be lowercase (false positive for class name assignments)
]

[tool.ruff.lint.isort]
known-first-party = ["nodes", "generators", "utils", "config", "cataloging"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"
multiline-quotes = "double"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

