[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "engram-mcp-server"
version = "0.1.0"
description = "MCP server for loading and searching Engram expert packs"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Engram MCP Server Contributors" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Libraries",
]
dependencies = ["mcp", "rich>=13.0", "starlette", "uvicorn"]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
]

[project.scripts]
engram-server = "engram_server.server:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
engram_server = [
  "templates/meta.json",
  "templates/*.md",
  "templates/*/*.md",
  "static/*.html",
  "static/*.css",
  "static/*.js",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
