[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "mktclaw"
version = "5.5.0"
description = "营销虾 (MktClaw) — Demand-to-Delivery AI Agency"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "flake8",
    "pytest>=7.0",
]
server = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
]

[tool.setuptools.packages.find]
include = ["scripts.*"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100
