[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "mpt-portfolio"
version = "0.1.0"
description = "Modern Portfolio Theory portfolio optimizer with backtesting and rebalancing"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "yfinance>=0.2.36",
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.11",
    "matplotlib>=3.7",
    "pyyaml>=6.0",
    "rich>=13.0",
    "click>=8.1",
]

[project.scripts]
mpt-portfolio = "mpt_portfolio.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
