[project]
name = "pha-openclaw-skill"
version = "0.2.0"
description = "Personal Health Agent - OpenClaw skill for Fitbit wearable data"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.8",
]

[tool.uv]
dev-dependencies = []
