[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "axiom-rebrand"
version = "0.1.5"
description = "Generic rebrand pipeline. Deterministic, idempotent, byte-to-byte. Strip jargon, fix paths, regenerate manifests, validate."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
dependencies = [
    "PyYAML>=5.0",  # for YAML config support (optional, falls back to JSON)
]
authors = [
    {name = "Axioma Tools"},
]
keywords = ["rebrand", "publish", "deterministic", "byte-to-byte", "idempotent", "open-source"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Documentation",
    "Topic :: Utilities",
]

[project.scripts]
axiom-rebrand = "axiom_rebrand.rebrand:main"

[project.urls]
Homepage = "https://github.com/axioma-stellaris/axiom-rebrand"

