[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sigui-security"
version = "2.0.1"
description = "OpenClaw skill for Sigui Protocol — AI security oracle for blockchain transactions"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Warma Abdoul Ibonon Eric", email = "ericwarma2006@gmail.com" },
]
keywords = ["blockchain", "security", "web3", "defi", "ai-agent", "sigui", "openclaw"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Office/Business :: Financial",
]
requires-python = ">=3.10"
dependencies = [
    "sigui-sdk>=0.3.1",
    "rich>=13.0.0",
]

[project.scripts]
sigui-evaluate = "evaluate:main"

[project.urls]
Homepage = "https://github.com/ibonon/Sigui"
Repository = "https://github.com/ibonon/Sigui"
"Bug Tracker" = "https://github.com/ibonon/Sigui/issues"
ClawHub = "https://clawhub.ai/ibonon/sigui-security"
